Testing Environment Development (0.1.0) - Changed Sense.java#tickTimer to scanTimer for clarity - Migrated HurtSense to common EntitySense at BasicEntitySense.java - Changed Sense.java to have onAdd and onRemove be optional implementing methods
- Adjusted Action security of functions and accessibility
- Adjusted Actions to utilize an unmodifiable set to cache at build time rather than rebuild every time Preconditions or Effects are accessed
- Fixed DataFlowIssue of Action.java
- Removed Action#shouldLog with the implementation of the Debug System
- Updated Documentation of IStrategy#canPerform to be clearer with the function's intent

- Adjusted how Agent pushes to the ProfilerFiller to use a constant string instead of reformatting
- Migrated Agent#getActions to return Identifiers instead of IdentifiedData to avoid ticking or mutating actions outside their intended scope
- Migrated Agent Set-related systems to use ImmutableSet instead of HashSet
- Adjusted Agent functions to be more secure with data visibility

- Created a few ActionStrategies to test performance of a simple entity later

- Cleaned up minor, old code

Signed-off-by: Warnickwar <136026142+warnickwar@users.noreply.github.com>